fixed(?) vertical overflow issues on linux, other css fixes

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ body{
   margin: 0;
   width: 357px;
   height: 600px;
+  overflow-y: hidden;
   font-size: 16px;
   font-family: Inter, sans-serif;
   -webkit-font-smoothing: antialiased;
